--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "test-ci": "jest --ci",
-    "test-watch": "jest -e --watch *.js"
+    "test-watch": "jest -e --watch *.js",
+    "debug": "nodemon --inspect ./"
   },
   "engines": {
     "node": "8.7.10",
@@ -16,11 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
-    "socket.io": "^2.0.4",
-    "uuid": "^3.1.0"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "jest": "^21.2.1"
+    "jest": "^23.6.0"
   }
 }
