--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "test-ci": "jest --ci",
     "test-watch": "jest -e --watch *.js",
+    "start": "node app",
     "debug": "nodemon --inspect ./"
   },
   "engines": {
